tests/import/t21496.nim
discard """
  errormsg: "ambiguous identifier: 'm21496'"
"""

import fizz/m21496, buzz/m21496

# bug #21496

m21496.fb()
